--- a/angular/src/app/main/reports/task-report/task-report.component.html
+++ b/angular/src/app/main/reports/task-report/task-report.component.html
@@ -3,10 +3,11 @@
         <div class="kt-subheader__main">
             <h3 class="kt-subheader__title">
                 <img src="./assets/media/ClosingCheckList/clipboard.svg" alt="clipboard">
-                <span class="headSpace">{{"TaskReports" | localize}}</span>
+                <span class="headSpace">{{"Reports" | localize}}</span>
             </h3>
             <span class="kt-subheader__separator kt-subheader__separator--v"></span>
             <span class="kt-subheader__desc">
+                {{"Task Reports" | localize}}
             </span>
         </div>
         <div class="kt-subheader__wrapper pt-3">
