--- a/angular/src/app/main/reports/observe-variance/observe-variance.component.html
+++ b/angular/src/app/main/reports/observe-variance/observe-variance.component.html
@@ -62,10 +62,10 @@
 
                     <div class="record-card-header">
                         <div class="record-card-header-bottom">
-                            <div class="modal fade" id="kt_modal_6" tabindex="-1" role="dialog"
+                            <div class="modal fade bd-example-modal-lg" id="kt_modal_6" tabindex="-1" role="dialog"
                                 aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
+                                <div class="modal-dialog modal-lg" role="document">
+                                    <div class="modal-content" style="width: 630px !important;margin: 0 auto;">
                                         <div class="modal-header">
                                             <h5 class="modal-title" id="exampleModalLongTitle">Compare Variances
                                             </h5>
@@ -77,7 +77,7 @@
 
                                             <div class="modal_month">
                                                 <div class="row">
-                                                    <div>
+                                                    <div class="col-6">
                                                         <div class="month-calender">
                                                             <form class="input-arrow">
                                                                 <input (ngModelChange)="firstmonth($event)" [(ngModel)]="FirstMonth" required="required"
@@ -88,22 +88,27 @@
                                                                     (onShown)="onOpenCalendar($event)">
                                                             </form>
                                                         </div>
-                                                        <div class="dateRadio col-9">
+                                                        <div class="dateRadio">
                                                             <div *ngFor="let item of firstMonthData"
-                                                                class="kt-radio-list">
-                                                                <label class="kt-radio kt-radio--brand" name="radio1">
-                                                                    <input type="radio"
-                                                                        [checked]="item.id === firstMonthid"
-                                                                        [value]="item.id"
-                                                                        (change)="onSelectionChange(item.id)">
-                                                                    {{item.attachmentName}}
-                                                                    <span></span>
-                                                                </label>
+                                                                class="kt-radio-list row">
+                                                                <div class="col-8">
+                                                                    <label class="kt-radio kt-radio--brand" name="radio1">
+                                                                        <input type="radio"
+                                                                            [checked]="item.id === firstMonthid"
+                                                                            [value]="item.id"
+                                                                            (change)="onSelectionChange(item.id)">
+                                                                        {{item.attachmentName}}
+                                                                        <span></span>
+                                                                    </label>
+                                                                </div>
+                                                                <div class="col-4">                               
+                                                                    <span class="pl-0" style=" color: blue;">{{item.creationTime | momentFormat:'DD MMM YYYY'}}</span>
+                                                                </div>
                                                             </div>
                                                         </div>
                                                     </div>
                                                     
-                                                    <div>
+                                                    <div class="col-6 border-gray border-left">
                                                         <div class="month-calender">
                                                             <form class="input-arrow">
                                                                 <input (ngModelChange)="secondMonth($event)" [(ngModel)]="SecondMonth" required="required"
@@ -114,22 +119,25 @@
                                                                     (onShown)="onOpenCalendar($event)">
                                                             </form>
                                                         </div>
-                                                        <div class="dateRadio col-9">
+                                                        <div class="dateRadio">
                                                             <div class="kt-radio-list">
 
                                                                 <div *ngFor="let item of secondMonthData"
-                                                                    class="kt-radio-list">
-
-                                                                    <label class="kt-radio kt-radio--brand"
-                                                                        name="radio1">
-                                                                        <input type="radio"
-                                                                            [checked]="item.id === secondMonthid"
-                                                                            [value]="item.id"
-                                                                            (change)="onSelectionSecondMonthChange(item.id)">
-                                                                        {{item.attachmentName}}
-                                                                        <span></span>
-                                                                    </label>
-
+                                                                    class="kt-radio-list row">
+                                                                    <div class="col-8">
+                                                                        <label class="kt-radio kt-radio--brand"
+                                                                            name="radio1">
+                                                                            <input type="radio"
+                                                                                [checked]="item.id === secondMonthid"
+                                                                                [value]="item.id"
+                                                                                (change)="onSelectionSecondMonthChange(item.id)">
+                                                                            {{item.attachmentName}}
+                                                                            <span></span>
+                                                                        </label>
+                                                                    </div>
+                                                                    <div class="col-4">                               
+                                                                        <span class="pl-0" style=" color: blue;">{{item.creationTime | momentFormat:'DD MMM YYYY'}}</span>
+                                                                    </div>
                                                                 </div>
 
 
