--- a/angular/src/app/main/reports/observe-variance/observe-variance.component.html
+++ b/angular/src/app/main/reports/observe-variance/observe-variance.component.html
@@ -4,7 +4,7 @@
             <div [class]="containerClass">
                 <div class="kt-subheader__main">
                     <h3 class="kt-subheader__title">
-                        <img src="./assets/media/ClosingCheckList/clipboard.svg" alt="clipboard">
+                        <img src="./assets/media/ClosingCheckList/MaskGroup30.svg" alt="clipboard">
                         <span class="headSpace">{{"Reports" | localize}}</span>
                     </h3>
                     <span class="kt-subheader__separator kt-subheader__separator--v"></span>
@@ -67,7 +67,7 @@
                                 <div class="modal-dialog modal-lg" role="document">
                                     <div class="modal-content" style="width: 630px !important;margin: 0 auto;">
                                         <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLongTitle">Compare Variances
+                                            <h5 class="modal-title" id="exampleModalLongTitle">Observe variance
                                             </h5>
                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             </button>
