--- a/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.css
+++ b/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.css
@@ -4,7 +4,48 @@
     border: 1px solid #000;
     cursor: pointer;
 }
+.compress{
+    width: 22px !important;
+}
 
+
+.chat-wrapper-inner{
+    background-color: #F0F0F0;
+    padding: 2px 10px;
+    margin-top: 5px;
+}
+.docx-btn{
+        display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.chat-wrapper{
+    height: 86px;
+    overflow-y: auto;
+}
+
+ul, ul li {
+    -webkit-transform: scaleY(-1);
+       -moz-transform: scaleY(-1);
+        -ms-transform: scaleY(-1);
+         -o-transform: scaleY(-1);
+            transform: scaleY(-1);
+    
+    }
+    ul {
+        
+        width: 100%;
+        padding :0px;
+        margin:0px;
+        border:none;
+    }
+     li {
+        width: 100%;
+        padding :0px;
+        margin:0px;
+        border:none;
+        *display: inline;
+    }
 .select .options {
     position: absolute;
     top: 29px;
