--- a/angular/src/app/main/reconcilliation/amortized/amortized-details/amortized-details.component.css
+++ b/angular/src/app/main/reconcilliation/amortized/amortized-details/amortized-details.component.css
@@ -257,7 +257,7 @@ justify-content: center;
 
 
 .chat-wrapper-inner{
-    background-color: #F0F0F0;
+    background-color: #E8E8E8;
     padding: 2px 10px;
     margin-top: 5px;
 }
@@ -267,10 +267,14 @@ justify-content: center;
     justify-content: space-between;
 }
 .chat-wrapper{
-    height: 86px;
+    
+    padding :0px 30px !important;
     overflow-y: auto;
 }
-
+.editor{
+    max-height: 250px;
+    overflow-y: auto;
+}
 ul, ul li {
     -webkit-transform: scaleY(-1);
        -moz-transform: scaleY(-1);
@@ -280,7 +284,7 @@ ul, ul li {
     
     }
     ul {
-        
+        list-style: none;
         width: 100%;
         padding :0px;
         margin:0px;
