--- a/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.css
+++ b/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.css
@@ -10,7 +10,7 @@
 
 
 .chat-wrapper-inner{
-    background-color: #F0F0F0;
+    background-color: #E8E8E8;
     padding: 2px 10px;
     margin-top: 5px;
 }
@@ -20,7 +20,8 @@
     justify-content: space-between;
 }
 .chat-wrapper{
-    height: 86px;
+    
+    padding :0px 30px !important;
     overflow-y: auto;
 }
 
@@ -33,7 +34,7 @@ ul, ul li {
     
     }
     ul {
-        
+        list-style: none;
         width: 100%;
         padding :0px;
         margin:0px;
@@ -46,6 +47,7 @@ ul, ul li {
         border:none;
         *display: inline;
     }
+
 .select .options {
     position: absolute;
     top: 29px;
