--- a/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.css
+++ b/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.css
@@ -24,7 +24,7 @@
 
 
 .chat-wrapper-inner{
-    background-color: #F0F0F0;
+    background-color: #E8E8E8;
     padding: 2px 10px;
     margin-top: 5px;
 }
@@ -34,7 +34,8 @@
     justify-content: space-between;
 }
 .chat-wrapper{
-    height: 86px;
+    
+    padding :0px 30px !important;
     overflow-y: auto;
 }
 
@@ -47,7 +48,7 @@ ul, ul li {
     
     }
     ul {
-        
+        list-style: none;
         width: 100%;
         padding :0px;
         margin:0px;
