--- a/angular/src/app/main/reconcilliation/itemized/itemized.component.css
+++ b/angular/src/app/main/reconcilliation/itemized/itemized.component.css
@@ -1141,44 +1141,46 @@
         width: 22px !important;
     }
     
+   
+.chat-wrapper-inner{
+    background-color: #E8E8E8;
+    padding: 2px 10px;
+    margin-top: 5px;
+}
+.docx-btn{
+        display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.chat-wrapper{
     
-    .chat-wrapper-inner{
-        background-color: #F0F0F0;
-        padding: 2px 10px;
-        margin-top: 5px;
-    }
-    .docx-btn{
-            display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-    .chat-wrapper{
-        height: 86px;
-        overflow-y: auto;
-    }
+    padding :0px 30px !important;
+    overflow-y: auto;
+}
+
+ul, ul li {
+    -webkit-transform: scaleY(-1);
+       -moz-transform: scaleY(-1);
+        -ms-transform: scaleY(-1);
+         -o-transform: scaleY(-1);
+            transform: scaleY(-1);
     
-    ul, ul li {
-        -webkit-transform: scaleY(-1);
-           -moz-transform: scaleY(-1);
-            -ms-transform: scaleY(-1);
-             -o-transform: scaleY(-1);
-                transform: scaleY(-1);
-        
-        }
-        ul {
-            
-            width: 100%;
-            padding :0px;
-            margin:0px;
-            border:none;
-        }
-         li {
-            width: 100%;
-            padding :0px;
-            margin:0px;
-            border:none;
-            *display: inline;
-        }
+    }
+    ul {
+        list-style: none;
+        width: 100%;
+        padding :0px;
+        margin:0px;
+        border:none;
+    }
+     li {
+        width: 100%;
+        padding :0px;
+        margin:0px;
+        border:none;
+        *display: inline;
+    }
+
     .uppy-modal ::ng-deep .uppy-Dashboard-inner {
         min-height:100px !important;
         height: 100px !important;
